Temporarily store some code in notebook

--- a/notebooks/csad_model.ipynb
+++ b/notebooks/csad_model.ipynb
@@ -121,6 +121,71 @@
    "source": [
     "from numpy import dtype\n",
     "\n",
+    "# @timeit\n",
+    "# def _full_qtf(self, qtf_headings, qtf_freqs, qtfs, angle, method=\"Newman\"):\n",
+    "#     \"\"\"\n",
+    "#     Calculate the full QTF matrix for a fixed heading by Newmans approximation or \n",
+    "#     the geometric mean formulation. \n",
+    "    \n",
+    "#     #### MAKE THIS RETURN A (36, 47, 47) MATRIX AS - ONE 47 x 47 MATRIX FOR EACH HEADING!!!\n",
+    "\n",
+    "#     Note\n",
+    "#     ----\n",
+    "#     Only implemented for unidirectional waves at this moment. \n",
+    "\n",
+    "#     Parameters\n",
+    "#     ----------\n",
+    "#     qtf_headings : 1D-array\n",
+    "#         Headings used in calculation of QTFs\n",
+    "#     qtf_freqs : 1D-array\n",
+    "#         Frequencies used in calculation of QTFs\n",
+    "#     qtf_diag : 1D-array\n",
+    "#         The diagonal terms of the QTF for a given heading.\n",
+    "#     angle : 1D-array\n",
+    "#         Relative wave directional anlge.\n",
+    "#     method : string (default='Newman')\n",
+    "#         Method to be used for approximation.\n",
+    "    \n",
+    "#     Returns\n",
+    "#     -------\n",
+    "#     QTF : 2D-array\n",
+    "#         Full QTF matrix for a fixed heading.\n",
+    "\n",
+    "#     References\n",
+    "#     ----------\n",
+    "#     [Newman, 1974] INSERT HER\n",
+    "#     [Standing, Brendling and Wilson]\n",
+    "#     \"\"\"\n",
+    "\n",
+    "#     # First -> pick the values to be used for a given angle.\n",
+    "#     heading_index = np.argmin(np.abs(qtf_headings - angle))\n",
+    "#     qtf_diag = qtfs[:, heading_index, 0]\n",
+    "\n",
+    "#     # Second -> interpolate to the frequencies used in wave spectra. (self._freqs)\n",
+    "#     # Chosen to use closes frequency instead - this could be changed to an interpolation scheme instead.\n",
+    "#     freq_indices = [np.argmin(np.abs(qtf_freqs - wave_freq)) for wave_freq in self._freqs]\n",
+    "\n",
+    "#     # Third -> generate full QTF matrix based on either Newman approx or Geometric Mean\n",
+    "\n",
+    "#     QTF = np.empty((self._N, self._N))\n",
+    "#     for i, freq_i in enumerate(freq_indices):\n",
+    "#         Q_i = qtf_diag[freq_i]\n",
+    "#         for j, freq_j in enumerate(freq_indices):\n",
+    "#             Q_j = qtf_diag[freq_j]\n",
+    "\n",
+    "#             if method==\"Newman\":\n",
+    "#                 QTF[i, j] = 0.5*(Q_i + Q_j)\n",
+    "#             else:\n",
+    "#                 # Using geometric mean approximation\n",
+    "#                 sgn_equal = np.sign(Q_i) == np.sign(Q_j)\n",
+    "#                 if sgn_equal:\n",
+    "#                     QTF[i, j] = np.sign(Q_i)*np.abs(Q_i*Q_j)**(.5)\n",
+    "#                 else:\n",
+    "#                     QTF[i, j] = 0\n",
+    "\n",
+    "#     return QTF\n",
+    "\n",
+    "\n",
     "\n",
     "@timeit\n",
     "def full_qtf(qtfs, headings, freqs, wave_freqs, dof=0):\n",
