--- a/notebooks/gunnerus_man_3dof.ipynb
+++ b/notebooks/gunnerus_man_3dof.ipynb
@@ -9,7 +9,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\j-ehy\\AppData\\Local\\Temp\\ipykernel_23452\\2597218059.py:6: MatplotlibDeprecationWarning: The seaborn styles shipped by Matplotlib are deprecated since 3.6, as they no longer correspond to the styles shipped by seaborn. However, they will remain available as 'seaborn-v0_8-<style>'. Alternatively, directly use the seaborn API instead.\n",
+      "C:\\Users\\j-ehy\\AppData\\Local\\Temp\\ipykernel_3416\\2597218059.py:6: MatplotlibDeprecationWarning: The seaborn styles shipped by Matplotlib are deprecated since 3.6, as they no longer correspond to the styles shipped by seaborn. However, they will remain available as 'seaborn-v0_8-<style>'. Alternatively, directly use the seaborn API instead.\n",
       "  plt.style.use('seaborn-whitegrid')\n"
      ]
     }
@@ -138,6 +138,72 @@
    "source": [
     "plot_results()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from waves.wave_loads import WaveLoad\n",
+    "\n",
+    "# Test if we can create second order wave loads for Gunnerus\n",
+    "\n",
+    "wave_amps = np.array([.1, .2, .4, .6, .8, 1.0, 1.3, .5, .1])\n",
+    "freqs = np.array([0.4, 0.3, 0.6, .7, 1.2, .41, .54, .35, .1])\n",
+    "beta = np.ones(len(freqs))\n",
+    "\n",
+    "import json\n",
+    "with open(r\"C:\\Users\\j-ehy\\OneDrive - NTNU\\NTNU\\9 semester\\ProsjektOppgave\\wavemodel\\Wave-Model\\vessel_data\\gunnerus\\gunnerus_veres.json\", \"r\") as f:\n",
+    "    param = json.load(f)\n",
+    "\n",
+    "\n",
+    "# wl = WaveLoad(wave_amps, freqs, np.random.uniform(0, 2*np.pi, size=len(freqs)), beta, config_file=r\"C:\\Users\\j-ehy\\OneDrive - NTNU\\NTNU\\9 semester\\ProsjektOppgave\\wavemodel\\Wave-Model\\vessel_data\\gunnerus\\gunnerus_veres.json\", dof=6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(6, 36, 19)\n",
+      "(36,)\n",
+      "(36,)\n",
+      "[0.         0.17453293 0.34906585 0.52359878 0.6981317  0.87266463\n",
+      " 1.04719755 1.22173048 1.3962634  1.57079633 1.74532925 1.91986218\n",
+      " 2.0943951  2.26892803 2.44346095 2.61799388 2.7925268  2.96705973\n",
+      " 3.14159265 3.31612558 3.4906585  3.66519143 3.83972435 4.01425728\n",
+      " 4.1887902  4.36332313 4.53785606 4.71238898 4.88692191 5.06145483\n",
+      " 5.23598776 5.41052068 5.58505361 5.75958653 5.93411946 6.10865238]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['amp', 'w'])"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(np.array(param['driftfrc']['amp'])[:, :, :, 0].shape)\n",
+    "print(np.array(param['driftfrc']['w']).shape)\n",
+    "print(np.array(param['freqs']).shape)\n",
+    "print(np.array(param['headings']))\n",
+    "param['driftfrc'].keys()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
@@ -156,7 +222,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.9.2 (tags/v3.9.2:1a79785, Feb 19 2021, 13:44:55) [MSC v.1928 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
