--- a/notebooks/csad_model.ipynb
+++ b/notebooks/csad_model.ipynb
@@ -1512,7 +1512,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.9.2 (tags/v3.9.2:1a79785, Feb 19 2021, 13:44:55) [MSC v.1928 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
